testdata/fixtures/env/negative/placeholders.js
// must NOT fire: placeholder values, not real secrets
const stripeKey = "YOUR-STRIPE-KEY-HERE";
const apiKey = "<insert api key>";
const token = "example-token-changeme";
